<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/reservation" />
        <!--<item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/myProfile" />-->
        <item
            android:id="@+id/nav_promocode"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/promo_code" />
        <item
            android:id="@+id/nav_creditcard"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/credit_card" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_referafriend"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/refer_a_friend" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/aboutUs" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
