<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/layoutLoginMid"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login_pannel">



        <RelativeLayout
            android:id="@+id/rel_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_color">

            <TextView
                android:id="@+id/txtHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/forgot_password_header"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/button_back_ren"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_header"
            android:layout_marginTop="30dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/imgEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_mail" />

            <EditText
                android:id="@+id/edtEmail"
                style="@style/edtTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imgEmail"
                android:background="@color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/text_color_fp"
                android:textColorHint="@color/text_color_hint_fp"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/selector_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtEmail"
                android:background="@drawable/background_text_field" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnSendNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rel_email"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="53dp"
            android:background="@color/colorPrimary"
            android:text="@string/send_me_password"
            android:textColor="@color/button_text_color" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutLoginMid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/info_forgot_password"
        android:textColor="@color/text_field_info"
        android:textSize="14sp" />

</RelativeLayout>